--- a/style.css
+++ b/style.css
@@ -51,8 +51,11 @@ body {
 	min-height: 97px;
 	align-items: center;
 }
-@media	(max-width: 479px){
-	min-height: 50px;
+@media	(max-width: 575px){
+	.header__container {
+		display: none;
+		min-height: 50px;
+	}
 }
 .header__menu {
 	margin: 0px 0px 0px 70%;
@@ -79,6 +82,29 @@ body {
 	font-weight: 500;
 	line-height: 29px;
 }
+.header__container__lines{
+	min-height: 50px;
+	align-items: center;
+	display: none;
+}
+
+@media (max-width: 575px) {
+	.header__container__lines{
+		display: block;
+	}
+}
+.header__container__lines{
+	margin: 32px 0px 0px 0px;
+}
+
+.menu__line{
+	display: block;
+    width: 30px;
+    height: 1px;
+    background-color: #21243D; 
+    margin: 0px 21px 9px 90%;
+	margin-bottom: 9px; 
+}
 /* ................................................................................. */
 .page {
 	flex: 1 1 auto;
@@ -88,7 +114,7 @@ body {
 	padding: 228px 0px 148px 0px;
 	max-width: 506px;
 }
-@media (max-width: 479px){
+@media (max-width: 575px){
 	.main-block__body{
 		padding: 34px 0px 148px 0px;
 		max-width: 312px;
@@ -99,7 +125,7 @@ body {
 .main-block__container{
 	display: flex;
 }
-@media (max-width: 479px){
+@media (max-width: 575px){
 	.main-block__container{
 			flex-direction: column;
 			flex-wrap: wrap;
@@ -146,7 +172,7 @@ body {
 .main-block__image{
 	padding: 210px 0px 106px 0px;
 }
-@media (max-width: 479px){
+@media (max-width: 575px){
 	.main-block__image{
 	padding: 83px 0px 34px 0px;
 	}
