--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*............ОБНУЛУНИЕ..................................................................... */
 a {
 	text-decoration: none;
 }
@@ -38,7 +39,7 @@ body {
 	margin: 0px auto;
 	box-sizing: content-box;
 }
-/* ................................................................................. */
+/* ..........ШАПКА....................................................................... */
 .header {
 	position: absolute;
 	width: 100%;
@@ -109,7 +110,7 @@ body {
 .page {
 	flex: 1 1 auto;
 }
-/* ................................................................................. */
+/* .........ПЕРВЫЙ БЛОК........................................................................ */
 .main-block__body{
 	padding: 228px 0px 148px 0px;
 	max-width: 506px;
@@ -177,8 +178,99 @@ body {
 	padding: 83px 0px 34px 0px;
 	}
 }
+/*.........ВТОРОЙ БЛОК........................................................................*/
+.section__cards-block{
+  background-color: #EDF7FA;
+  padding: 32px 0;
+}
+.section-cards__blog {
+  background-color: #fff;
+}
+.title__blog {
+  font-weight: 700;
+  font-size: 44px;
+  padding-bottom: 48px; 
+}
+.title__wrapper {
+  display: flex;
+  justify-content: space-between; 
+}
+.title {
+  font-size: 22px;
+  margin-bottom: 20px; 
+}
+.view {
+  color: #00A8CC; 
+}
+.card__wrapper {
+  display: flex;
+  justify-content: space-between; 
+}
+.card {
+  width: 42%;
+  padding: 24px;
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0 4px 10px rgba(187, 225, 250, 0.25); }
+.card__title {
+  font-weight: 700;
+  font-size: 26px;
+  margin-bottom: 36px; 
+}
+.date__wrapper {
+  display: flex;
+  margin-bottom: 28px; 
+}
+.text:not(:first-child) {
+  position: relative;
+  margin-left: 48px; 
+}
+.text:not(:first-child)::before {
+  position: absolute;
+  height: 20px;
+  width: 1px;
+  top: 0;
+  left: -20%;
+  background-color: #21243D;
+}
+.card__text {
+  font-size: 16px; 
+}
+@media (max-width: 991px) {
+.title__wrapper {
+   justify-content: center; 
+ }
+.view {
+   display: none; 
+ }
+.card__wrapper {
+   flex-direction: column;
+   align-items: center; 
+ }
+.card {
+   margin: 0 20px;
+   width: 80%; 
+ }
+.card:not(:last-child) {
+   margin-bottom: 20px; 
+ } 
+}
+.card__wrapper__blog {
+  display: block; 
+}
+.card {
+  margin: 0;
+  box-shadow: none;
+  padding-bottom: 28px;
+  border-radius: 0;
+  border-bottom: 1px solid rgba(134, 149, 164, 0.5); 
+}
+.card:not(:first-child) {
+  padding-top: 32px; 
+}
+/*.........ТРЕТИЙ БЛОК........................................................................*/
 
-/* ................................................................................. */
+/*............................................................................................*/
 .footer{
 
 }
