--- a/style.css
+++ b/style.css
@@ -39,7 +39,11 @@ body {
 	margin: 0px auto;
 	box-sizing: content-box;
 }
-
+@media	(max-width: 575px){
+	._container {
+		max-width: 400px;
+	}
+}
 
 /* ..........ШАПКА....................................................................... */
 .header {
@@ -65,12 +69,12 @@ body {
 }
 @media	(max-width: 992px){
 	.header__menu {
-	margin: 0px 0px 0px 60%;
+		margin: 0px 0px 0px 60%;
 	}
 }
 @media	(max-width: 767px){
 	.header__menu {
-	margin: 0px 0px 0px 50%;
+		margin: 0px 0px 0px 50%;
 	}
 }
 .menu__list {
@@ -102,10 +106,10 @@ body {
 
 .menu__line{
 	display: block;
-    width: 30px;
-    height: 1px;
-    background-color: #21243D; 
-    margin: 0px 21px 9px 90%;
+	width: 30px;
+	height: 1px;
+	background-color: #21243D; 
+	margin: 0px 21px 9px 90%;
 	margin-bottom: 9px; 
 }
 /* ................................................................................. */
@@ -119,7 +123,7 @@ body {
 }
 @media (max-width: 575px){
 	.main-block__body{
-		padding: 34px 0px 148px 0px;
+		padding: 34px 0px 58px 0px;
 		max-width: 312px;
 		margin: 0px auto;
 		text-align: center;
@@ -130,11 +134,11 @@ body {
 }
 @media (max-width: 575px){
 	.main-block__container{
-			flex-direction: column;
-			flex-wrap: wrap;
-		}
-		#a { order: 2; }
-        #b { order: 1; }
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+	#a { order: 2; }
+	#b { order: 1; }
 	
 }
 .main-block__title{
@@ -145,8 +149,8 @@ body {
 }
 @media (max-width: 479px){
 	.main-block__title{
-	font-size: 32px;
-	line-height: 40px;
+		font-size: 32px;
+		line-height: 40px;
 	}
 }
 .main-block__text{
@@ -177,206 +181,245 @@ body {
 }
 @media (max-width: 575px){
 	.main-block__image{
-	padding: 83px 0px 34px 0px;
+		padding: 83px 0px 34px 0px;
 	}
 }
 /*.........ВТОРОЙ БЛОК........................................................................*/
 .section__cards-block{
-  background-color: #EDF7FA;
-  padding: 32px 0;
+	background-color: #EDF7FA;
+	padding: 32px 0;
 }
 .section-cards__blog {
-  background-color: #fff;
+	background-color: #fff;
 }
 .title__blog {
-  font-weight: 700;
-  font-size: 44px;
-  padding-bottom: 48px; 
+	font-weight: 700;
+	font-size: 44px;
+	padding-bottom: 48px; 
 }
 .cards-block__title {
-  display: flex;
-  justify-content: space-between; 
+	display: flex;
+	justify-content: space-between; 
 }
 .title {
-  font-size: 22px;
-  margin-bottom: 20px; 
+	font-size: 22px;
+	margin-bottom: 20px; 
 }
 .view {
-  color: #00A8CC; 
+	color: #00A8CC; 
 }
 .card__wrapper {
-  display: flex;
-  justify-content: space-between; 
+	display: flex;
+	justify-content: space-between; 
 }
 .card {
-  width: 42%;
-  padding: 24px;
-  border-radius: 4px;
-  background-color: #fff;
-  box-shadow: 0 4px 10px rgba(187, 225, 250, 0.25); }
-.card__title {
-  font-weight: 700;
-  font-size: 26px;
-  margin-bottom: 36px; 
-}
-.date__wrapper {
-  display: flex;
-  margin-bottom: 28px; 
-}
-.text{
-	font-size: 18px;
-	margin: 0px 20px 0px 0px;
-}
-.card__text {
-  font-size: 16px; 
-}
-@media (max-width: 991px) {
-.cards-block__title__wrapper {
-   justify-content: center; 
- }
-.view {
-   display: none; 
- }
-.card__wrapper {
-   flex-direction: column;
-   align-items: center; 
- }
-.card {
-   margin: 0 20px;
-   width: 80%; 
- }
-.card:not(:last-child) {
-   margin-bottom: 20px; 
- } 
-}
-.card__wrapper__blog {
-  display: block; 
-}
-.card {
-  margin: 0;
-  box-shadow: none;
-  padding-bottom: 28px;
-  border-radius: 0;
-  border-bottom: 1px solid rgba(134, 149, 164, 0.5); 
-}
-.card:not(:first-child) {
-  padding-top: 32px; 
-}
+	width: 42%;
+	padding: 24px;
+	border-radius: 4px;
+	background-color: #fff;
+	box-shadow: 0 4px 10px rgba(187, 225, 250, 0.25); }
+	.card__title {
+		font-weight: 700;
+		font-size: 26px;
+		margin-bottom: 36px; 
+	}
+	.date__wrapper {
+		display: flex;
+		margin-bottom: 28px; 
+	}
+	.text1{
+		font-size: 18px;
+		margin: 0px 20px 0px 0px;
+	}
+	.card__text {
+		font-size: 16px; 
+	}
+	@media (max-width: 991px) {
+		.cards-block__title{
+			justify-content: center;
+		}
+		.card__title {
+			margin-bottom: 12px; 
+		}
+		.date__wrapper {
+			display: flex;
+			margin-bottom: 19px; 
+		}
+		.text1{
+			margin: 0px 20px 0px 0px;
+		}
+		.cards-block__title__wrapper {
+			justify-content: center; 
+		}
+		.view {
+			display: none; 
+		}
+		.card__wrapper {
+			flex-direction: column;
+			align-items: center; 
+		}
+		.card {
+			margin: 0 20px;
+			width: 80%; 
+		}
+		.card:not(:last-child) {
+			margin-bottom: 20px; 
+		} 
+	}
+	.card__wrapper__blog {
+		display: block; 
+	}
+	.card {
+		margin: 0;
+		box-shadow: none;
+		padding-bottom: 28px;
+		border-radius: 0;
+		border-bottom: 1px solid rgba(134, 149, 164, 0.5); 
+	}
+	.card:not(:first-child) {
+		padding-top: 32px; 
+	}
 /*.........ТРЕТИЙ БЛОК........................................................................*/
 .title {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  font-size: 22px; 
+	margin-top: 40px;
+	margin-bottom: 40px;
+	font-size: 22px; 
 }
 .title__works {
-  font-size: 44px;
-  font-weight: 700;
-  line-height: 1;
-  margin-top: 0; 
+	font-size: 44px;
+	font-weight: 700;
+	line-height: 1;
+	margin-top: 0; 
 }
 .block {
-  display: flex;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #EDF7FA;
-  margin-bottom: 32px; 
+	display: flex;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #EDF7FA;
+	margin-bottom: 32px; 
 }
 .block1 {
-  display: flex;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #EDF7FA;
-  margin-bottom: 32px; 
+	display: flex;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #EDF7FA;
+	margin-bottom: 32px; 
 }
 .block2 {
-  display: flex;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #EDF7FA;
-  margin-bottom: 32px; 
+	display: flex;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #EDF7FA;
+	margin-bottom: 32px; 
+}
+.left{
+	display: flex;
+	justify-content: center;
 }
 .left img {
-  display: flex; 
+	padding: 0px 0px 17px 0px;
+	display: flex; 
 }
 .right {
-  margin-left: 16px; 
+	padding: 0px 20px 0px 20px;
+	margin-left: 16px; 
 }
 .right__title {
-  font-weight: 700;
-  font-size: 30px;
-  color: #21243D; 
+	font-weight: 700;
+	font-size: 30px;
+	color: #21243D; 
 }
 .info__wrapper {
-  display: flex;
-  margin-top: 8px;
-  margin-bottom: 24px;
-  align-items: center; 
+	display: flex;
+	margin-top: 8px;
+	margin-bottom: 24px;
+	align-items: center; 
 }
 .year {
-  padding: 0 12px;
-  color: #fff;
-  background-color: #142850;
-  border-radius: 16px;
-  font-weight: 700; 
+	padding: 0 12px;
+	color: #fff;
+	background-color: #142850;
+	border-radius: 16px;
+	font-weight: 700; 
 }
 .type {
-  margin-left: 28px;
-  font-size: 20px;
-  color: rgba(134, 149, 164, 0.75); 
+	margin-left: 28px;
+	font-size: 20px;
+	color: rgba(134, 149, 164, 0.75); 
 }
 .right__text {
-font-size: 16px; 
+	font-size: 16px; 
 }
 
 @media (max-width: 575px) {
-.block {
-   flex-direction: column; 
- }
- .block1 {
-   display: none; 
- }
- .block2 {
- 	display: none;
- }
-.left img {
-   margin-bottom: 12px;
-   height: 90%;
-   width: 90%; 
- }
-.right {
-  margin-left: 0; 
- }
-.right__title {
-  margin-bottom: 12px; 
- } 
+	.title{
+		display: flex;
+		justify-content: center;
+	}
+	.block {
+		flex-direction: column; 
+	}
+	.block1 {
+		display: none; 
+	}
+	.block2 {
+		display: none;
+	}
+	.left img {
+		margin-bottom: 12px;
+		height: 90%;
+		width: 90%; 
+	}
+	.right {
+		margin-left: 0; 
+	}
+	.right__title {
+		margin-bottom: 12px; 
+	} 
 }
 .heading {
-  font-weight: 700;
-  font-size: 34px;
-  margin-bottom: 48px;
-  max-width: 60%; 
+	font-weight: 700;
+	font-size: 34px;
+	margin-bottom: 48px;
+	max-width: 60%; 
 }
 .info__wrapper {
-  display: flex;
-  align-items: center;
-  margin-bottom: 28px; 
+	display: flex;
+	align-items: center;
+	margin-bottom: 28px; 
 }
 .year {
-  font-weight: 700;
-  font-size: 18px;
-  color: #fff;
-  background-color: #142850;
-  padding: 6px 12px;
-  border-radius: 16px; 
+	font-weight: 700;
+	font-size: 18px;
+	color: #fff;
+	background-color: #142850;
+	padding: 6px 12px;
+	border-radius: 16px; 
 }
 .info {
-  margin-left: 16px; 
+	margin-left: 16px; 
 }
 .text {
-  margin-bottom: 48px; 
+	margin-bottom: 48px; 
+	font-size: 16px;
 }
 .text {
-  margin-bottom: 32px; 
+	margin-bottom: 32px; 
 }
 
 /*............................................................................................*/
 .footer{
+	padding: 48px 0; 
+}
+.Contact-Information__wrapper {
+	padding: 0px 0px 0px 35px;
+	display: flex;
+	justify-content: center; 
+}
+.Contact-Information__wrapper img {
+	display: flex;
+	cursor: pointer;
+	margin-bottom: 28px; 
+	margin-right: 30px;
+}
 
+.text {
+	text-align: center; 
 }
