--- a/style.css
+++ b/style.css
@@ -62,32 +62,8 @@ body {
 	.header__container {
 		display: none;
 		min-height: 50px;
+
 	}
-}
-.header__menu {
-	margin: 0px 0px 0px 70%;
-}
-@media	(max-width: 992px){
-	.header__menu {
-		margin: 0px 0px 0px 60%;
-	}
-}
-@media	(max-width: 767px){
-	.header__menu {
-		margin: 0px 0px 0px 50%;
-	}
-}
-.menu__list {
-	flex-wrap: wrap;
-	display: flex;
-}
-.menu__item {
-	margin: 0px 0px 0px 35px;
-}
-.menu__link {
-	color: #000000;
-	font-weight: 500;
-	line-height: 29px;
 }
 .header__container__lines{
 	min-height: 50px;
@@ -103,6 +79,53 @@ body {
 .header__container__lines{
 	margin: 32px 0px 0px 0px;
 }
+.header__menu {
+	margin: 0px 0px 0px 70%;
+}
+@media	(max-width: 992px){
+	.header__menu {    
+		margin: 0px 70px 0px 0px
+	}
+}
+@media	(max-width: 575px){
+	
+	.show{
+	display: flex;
+	background-color: #EDF7FA;
+		box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+		flex-direction: column;
+		text-align: center;
+		position: fixed;
+		top: 80px;
+		left: 10%;
+		width: 80%;
+		transition: transform 0.3s ease-in;
+		z-index: 100;
+}
+	.show-x{
+		transform: translateX(0);
+
+	}
+	.show-x .bar:first-of-type {
+		transform: translate(-50%, 50%) rotate(225deg);
+	}
+	
+	.show-x .bar:last-of-type {
+		transform: translate(-50%, -150%) rotate(-225deg);
+	}
+}
+.menu__list {
+	display: flex;
+}
+.menu__item {
+	margin: 0px 0px 0px 35px;
+}
+.menu__link {
+	color: #000000;
+	font-weight: 500;
+	line-height: 29px;
+}
+
 
 .menu__line{
 	display: block;
